--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h3 {
 }
 .start {
 	display: flex;
-	flex-direction: column;
+	justify-content: space-around;
 	align-self: center;
 	align-items: center;
 	padding: 10px;
